Config_Templates/Others/create_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alegla-backend-prod
  annotations:
    scheduler.alpha.kubernetes.io/node-selector: env=prod
