Config_Templates/Others/create_http_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-config
spec:
  parentRefs:
  - name: gateway-config
  hostnames:
  - "www.alegla-dev.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /home
    backendRefs:
    - name: frontend-services
      port: 90
